Implemented popular post side-bar. Built to test SQL and database functionality, see new file: popularsidebar.php, can be included within the left aside. See profile.php for proper implementation.

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,11 @@ body {
     background-color: white;
 }
 
+.popularPost a {
+    text-decoration: none;
+    color: black;
+}
+
 .popular-list li {
     margin-left: 10px;
     margin-bottom: 10px;
