--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,11 @@ body {
     display: flex;
     height: calc(100vh - 140px); /* Subtract header height */
     overflow: hidden; /* Prevent overall page scrolling */
+    /* width: 100%; */
+}
+
+#mainFeed {
+    height: auto !important;
 }
 
 /* =========================*/
@@ -180,7 +185,7 @@ body {
 }
 
 .profile-header {
-    display: flex;
+    /* display: flex; */
     padding: 15px;
     background-color: white;
     border-radius: 15px;
