Each post now correctly links to post.php

--- a/styles.css
+++ b/styles.css
@@ -849,3 +849,9 @@ img {
     background-color: #ddffdd;
     border-left: 6px solid #4CAF50;
 }
+
+
+#titleLink {
+    text-decoration: none;
+    color: black;
+}
