Added table and search functionality for admin users, posts and comments

--- a/styles.css
+++ b/styles.css
@@ -890,3 +890,11 @@ img {
 /* ================== */
 /* Admin Page Styling */
 /* ================== */
+
+#searchBox {
+    max-width: max-content;
+}
+
+#searchButton {
+    width: 5%;
+}
