--- a/styles.css
+++ b/styles.css
@@ -529,6 +529,25 @@ a {
     min-height: 60px;
 }
 
+.profile-buttons > button {
+    font-family: var(--font-family-main);
+    cursor: pointer;
+    border: none;
+    border-radius: var(--border-radius-sm);
+    padding: var(--spacing-sm) var(--spacing-lg);
+    color: var(--color-white);
+    background-color: var(--color-secondary);
+    width: 120px;
+    height: 36px;
+    align-self: flex-end;
+    margin-top: var(--spacing-md);
+}
+
+.profile-buttons > button:hover {
+    background-color: var(--color-accent);
+}
+
+
 .side-profile-tags {
     margin-left: var(--spacing-sm);
     margin-top: var(--spacing-sm);
